--- a/templates/about.html
+++ b/templates/about.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About - Aetherion</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
-    <link rel="icon" type="image/png" href="{{ url_for('static', filename='logo.png') }}">
+    <link rel="stylesheet" href="/static/styles.css">
+    <img src="/static/logo.png" alt="Logo">
 </head>
 <body>
     <header class="header">
