--- a/templates/about.html
+++ b/templates/about.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About - Aetherion</title>
     <link rel="stylesheet" href="/static/styles.css">
-    <img src="/static/logo.png" alt="Logo">
+    <link rel="icon" href="{{ url_for('static', filename='logo.png') }}">
 </head>
 <body>
     <header class="header">
