--- a/templates/home.html
+++ b/templates/home.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home - Aetherion</title>
     <link rel="stylesheet" href="/static/styles.css">
-    <link rel="icon" href="/static/logo.png" type="image/png">
+    <link rel="icon" href="{{ url_for('static', filename='logo.png') }}">
 </head>
 <body> 
     <div class="background"></div>
