--- a/templates/home.html
+++ b/templates/home.html
@@ -12,7 +12,7 @@
     <body style="background-image: url('/static/background.png'); background-size: cover; background-attachment: fixed;">
     <header class="header">
         <div class="logo-container">
-            <img src="/static/logo.png" alt="Aetherion Logo" class="logo">
+            <img src="{{ url_for('static', filename='logo.png') }}" alt="Aetherion Logo" class="logo">
             <h1 class="bot-name">Aetherion</h1>
         </div>
         <nav class="nav">
