--- a/templates/home.html
+++ b/templates/home.html
@@ -1,3 +1,17 @@
+{% if user %}
+<div class="profile">
+    <img src="{{ user.avatar_url }}" alt="Avatar" class="avatar">
+    <div class="dropdown">
+        <ul>
+            <li><a href="/profile">Profile</a></li>
+            <li><a href="/dashboard">Dashboard</a></li>
+            <li class="logout"><a href="/logout">Logout</a></li>
+        </ul>
+    </div>
+</div>
+{% else %}
+<a href="/login" class="login-btn">Login with Discord</a>
+{% endif %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
