--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,1 +1,35 @@
+<style>
+    .profile-container {
+        text-align: center;
+        color: #fff;
+        background: rgba(0, 0, 0, 0.8);
+        border-radius: 10px;
+        padding: 20px;
+        margin: 50px auto;
+        width: 50%;
+        box-shadow: 0 0 20px rgba(0, 255, 255, 0.5);
+    }
+
+    .profile-container img {
+        width: 100px;
+        height: 100px;
+        border-radius: 50%;
+        margin-bottom: 20px;
+    }
+
+    .profile-container h1 {
+        margin-bottom: 10px;
+        color: #0ff;
+    }
+
+    .profile-container p {
+        margin: 5px 0;
+    }
+</style>
+
+<div class="profile-container">
+    <img src="https://cdn.discordapp.com/avatars/{{ user.id }}/{{ user.avatar }}.png" alt="{{ user.username }}">
+    <h1>{{ user.username }}</h1>
+    <p>ID: {{ user.id }}</p>
+</div>
 
